# matrix-calc

./: .gitignore  LICENSE  README.md  matrix-calc.cabal  stack.yaml
src/: Main.hs
