name:                matrix-calc
version:             0.1.0.0
-- synopsis:
-- description:
homepage:            https://github.com/githubuser/matrix-calc#readme
license:             BSD3
license-file:        LICENSE
author:              mlyean
-- maintainer:          example@example.com
copyright:           2020 mlyean
category:            Web
build-type:          Simple
cabal-version:       >=1.10
extra-source-files:  README.md

executable matrix-calc
  hs-source-dirs:      src
  main-is:             Main.hs
  default-language:    Haskell2010
  build-depends:       base >= 4.7 && < 5
                     , vector >= 0.12
                     , matrix >= 0.3
                     , transformers >= 0.5
                     , HaTeX >= 3.22
